--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,9 +1,8 @@
 .content-container{
-    background-image: url('../img/background.png');
+    background-image: url('../img/peakpx\ \(4\).jpg');
     background-size: cover;      
     background-position: center;  
     background-repeat: no-repeat; 
-    filter: brightness(0.7);
     min-width: 100% !important;
     padding-top: 100px !important;
 }
