--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,8 +1,17 @@
 .content-container{
-    background-image: url('../img/peakpx\ \(4\).jpg');
+    /* background-image: url('../img/peakpx\ \(4\).jpg');
     background-size: cover;      
     background-position: center;  
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;  */
     min-width: 100% !important;
     padding-top: 100px !important;
+}
+
+body{
+     background-image: url('../img/peakpx\ \(4\).jpg');
+    background-size: cover;      
+    background-position: center;  
+    background-repeat: no-repeat;
+    background-size: cover;
+  background-attachment: fixed; 
 }
