--- a/src/static/css/language.css
+++ b/src/static/css/language.css
@@ -44,7 +44,7 @@
 }
 
 .main-btn {
-  background-color: #f4a261; 
+  background-color: #94312B; 
   color: white;
   border: none;
   border-radius: 50px; 
