--- a/src/static/css/timeline.css
+++ b/src/static/css/timeline.css
@@ -3,10 +3,30 @@
 }
 
 .vertical-timeline-element-content, .vertical-timeline-element-icon{
-  background: linear-gradient(135deg, rgba(255,120,0,0.55), rgba(255,70,0,0.45)) !important;
-  backdrop-filter: blur(18px) !important;
+
+  background: "rgba(148, 49, 43, 0.7)" !important;
+  /* backdrop-filter: blur(18px) !important;
   -webkit-backdrop-filter: blur(18px) !important;
-  box-shadow: 0 4px 25px rgba(255,120,0,0.45) !important;
-  border-bottom: 1px solid rgba(255,160,0,0.5) !important;
+  box-shadow: 0 4px 25px rgba(255,120,0,0.45) !important; */
+  /* border-bottom: 1px solid rgba(255,160,0,0.5) !important; */
+  color: white !important;
+}
+
+.vertical-timeline-element-icon svg {
+    display: block;
+    width: 24px;
+    height: 24px;
+    position: relative;
+    left: 0; 
+    top: 0;
+    margin-left: 0px; 
+    margin-top: 0px;
+}
+
+.vertical-timeline-element-date{
   color: white;
+}
+.vertical-timeline-element-content {
+  border: 3px solid #94312B !important;
+  box-shadow: none !important;    
 }
