--- a/src/static/css/intro.css
+++ b/src/static/css/intro.css
@@ -64,7 +64,7 @@
 @media (max-width: 768px) {
   .background-intro {
     min-height: auto;
-    padding-top: 5rem;   
+    /* padding-top: 2rem;    */
     padding-bottom: 3rem;
   }
 }
