--- a/src/static/css/intro.css
+++ b/src/static/css/intro.css
@@ -14,7 +14,7 @@
   }
 }
 .subtitle{
-    color: #f4a261 ;
+    color: #f4a261 !important;
     font-weight: bold;
 }
 
@@ -64,7 +64,11 @@
 @media (max-width: 768px) {
   .background-intro {
     min-height: auto;
-    /* padding-top: 2rem;    */
+    /* padding-top: 5rem;    */
     padding-bottom: 3rem;
   }
+  .container-intro{
+    padding-top: 1rem !important;
+  }
+
 }
