--- a/src/static/css/intro.css
+++ b/src/static/css/intro.css
@@ -67,7 +67,7 @@
     /* padding-top: 5rem;    */
     padding-bottom: 3rem;
   }
-  .container-intro{
+  .content-container{
     padding-top: 1rem !important;
   }
 
