--- a/src/static/css/intro.css
+++ b/src/static/css/intro.css
@@ -68,7 +68,7 @@
     padding-bottom: 3rem;
   }
   .content-container{
-    padding-top: 1rem !important;
+    padding-top: 0 !important;
   }
 
 }
