--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -4,7 +4,7 @@
     background-position: center;  
     background-repeat: no-repeat;  */
     min-width: 100% !important;
-    padding-top: 100px !important;
+    padding-top: 100px ;
 }
 
 body{
